@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-12-02T01:21:01Z",
+  "timestamp" : "2025-12-03T01:21:13Z",
   "count_outdated" : 1955,
   "uniques_outdated" : 156,
-  "count" : 1956,
-  "uniques" : 157,
+  "count" : 1957,
+  "uniques" : 158,
   "views" : [
     {
       "timestamp": "2025-12-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-02T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
