@@ -1,3 +1,12 @@
+2025-12-03T01:21:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19879074495 # 827
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-03
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 156 1955 / 157 1956
+* notice: next accum: outdated-unq outdated-all / unq all: 156 1955 / 158 1957
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-12-02]
+
 2025-12-02T01:21:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19843372529 # 826
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-02
